--- a/src/app/api/api.page.html
+++ b/src/app/api/api.page.html
@@ -37,9 +37,10 @@
               <h6>{{ item.protein_g }}g proteínas / {{ item.serving_size_g }}g</h6>
               <h6>{{ item.calories }} calorias</h6>
             </div>
-            <ion-button class="add-to-cart-button">
+            <!--<ion-button class="add-to-cart-button">
               <ion-icon name="add"></ion-icon>
-            </ion-button>
+            </ion-button>-->
+          
           </div>
         }
       </div>
@@ -58,9 +59,10 @@
             <h6>23g proteínas / 100g</h6>
             <h6>185 calorias</h6>
           </div>
-          <ion-button class="add-to-cart-button">
+          <!--<ion-button class="add-to-cart-button">
             <ion-icon name="add"></ion-icon>
-          </ion-button>
+          </ion-button>--> 
+         
         </div>
         
         <div class="cardapio-item">
@@ -70,9 +72,10 @@
             <h6>13g proteínas / 100g</h6>
             <h6>155 calorias</h6>
           </div>
-          <ion-button class="add-to-cart-button">
+          <!--<ion-button class="add-to-cart-button">
             <ion-icon name="add"></ion-icon>
-          </ion-button>
+          </ion-button>-->
+          
         </div>
 
         <div class="cardapio-item">
@@ -82,9 +85,10 @@
             <h6>17g proteínas / 100g</h6>
             <h6>389 calorias</h6>
           </div>
-          <ion-button class="add-to-cart-button">
+          <!--<ion-button class="add-to-cart-button">
             <ion-icon name="add"></ion-icon>
-          </ion-button>
+          </ion-button>-->
+          
         </div>
 
         <div class="cardapio-item">
@@ -94,9 +98,10 @@
             <h6>25g proteínas / 100g</h6>
             <h6>208 calorias</h6>
           </div>
-          <ion-button class="add-to-cart-button">
+          <!--<ion-button class="add-to-cart-button">
             <ion-icon name="add"></ion-icon>
-          </ion-button>
+          </ion-button>-->
+          
         </div>
       </div>
     }
