--- a/src/app/treinos/treinos.page.html
+++ b/src/app/treinos/treinos.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar >
+  <ion-toolbar>
     <ion-title>Meus Treinos</ion-title>
     <ion-buttons slot="end">
       <ion-button fill="clear">Filtro</ion-button>
@@ -8,10 +8,9 @@
 </ion-header>
 
 <ion-content class="ion-padding">
- 
-  <p class="recommendation">treinos</p>
+  
+  <p class="recommendation">Treinos</p>
 
-  <!-- INICIANTE -->
   <ion-card class="workout-card">
     <ion-card-content>
       <ion-grid>
@@ -31,7 +30,6 @@
     </ion-card-content>
   </ion-card>
 
- 
   <ion-card class="workout-card">
     <ion-card-content>
       <ion-grid>
@@ -40,7 +38,7 @@
             <ion-icon name="heart" class="workout-icon"></ion-icon>
           </ion-col>
           <ion-col size="6">
-            <ion-card-title class="workout-title">treinos para intermediario</ion-card-title>
+            <ion-card-title class="workout-title">Treinos para Intermediário</ion-card-title>
             <p class="workout-info">1h</p>
           </ion-col>
           <ion-col size="4" class="ion-text-end">
@@ -51,7 +49,6 @@
     </ion-card-content>
   </ion-card>
 
-  <!-- AVANÇADO -->
   <ion-card class="workout-card">
     <ion-card-content>
       <ion-grid>
@@ -60,7 +57,7 @@
             <ion-icon name="walk-outline" class="workout-icon"></ion-icon>
           </ion-col>
           <ion-col size="6">
-            <ion-card-title class="workout-title">treinos para avançado</ion-card-title>
+            <ion-card-title class="workout-title">Treinos para Avançado</ion-card-title>
             <p class="workout-info">1hr e 30 min</p>
           </ion-col>
           <ion-col size="4" class="ion-text-end">
@@ -70,17 +67,9 @@
       </ion-grid>
     </ion-card-content>
   </ion-card>
-
- 
+  
+  <div class="bottom-spacer"></div>
 </ion-content>
-
-<ion-header>
-  <ion-toolbar>
-    </ion-toolbar>
-</ion-header>
-
-<ion-content class="ion-padding">
-  </ion-content>
 
 <ion-footer>
   <ion-tab-bar slot="bottom">
