--- a/src/app/inicial/inicial.page.scss
+++ b/src/app/inicial/inicial.page.scss
@@ -15,40 +15,30 @@
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
   position: relative;
   margin: auto;
-  text-align: center; 
-  height: 17cm;
+  text-align: center;
+  height: 17cm; 
 }
 
 .logo {
-  margin-bottom: 40px; 
+  margin-bottom: 40px;
   width: 7cm;
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  left: 14px;
- 
+  left: 14px; 
 }
 
 
-#button{
+#button {
     position: relative;
     width: 3cm;
-    margin-left: 4cm;
-   top: 3cm;
-
+    margin: 0 auto;     
+    top: 3cm;           
+    display: block;    
 }
 
-h4{
+h4 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-text-shadow: 0.2px 0px 0px #000000;
+    text-shadow: 0.2px 0px 0px #000000;
     color: #287ad2;
 }
-
-
-
-
-
-
-
-
-
