--- a/src/app/intermediario/intermediario.page.html
+++ b/src/app/intermediario/intermediario.page.html
@@ -1,96 +1,141 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button (click)="goBack()">
-        <ion-icon name="arrow-back-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()">
+        <ion-icon name="arrow-back-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
 
-    <ion-title>Treino Intermediário</ion-title>
-  </ion-toolbar>
+    <ion-title>Treino Intermediário</ion-title>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
 
-  <h1 class="title">Dias de treino</h1>
+  <h1 class="title">Dias de treino</h1>
 
-  <ion-accordion-group expand="compact">
+  <ion-accordion-group expand="compact">
 
-    <!-- DIA 1 -->
-    <ion-accordion value="dia1" toggle-icon="chevron-down-outline">
-      <ion-item slot="header">
-        <ion-label>Dia 1 • Peito + Tríceps</ion-label>
-      </ion-item>
+        <ion-accordion value="dia1" toggle-icon="chevron-down-outline">
+      <ion-item slot="header">
+        <ion-label>Dia 1 • Peito + Tríceps</ion-label>
+      </ion-item>
 
-      <div class="accordion-content" slot="content">
-        <div class="exercise-card"><p>Supino reto – 4x10</p></div>
-        <div class="exercise-card"><p>Supino inclinado – 4x10</p></div>
-        <div class="exercise-card"><p>Crossover – 3x12</p></div>
-        <div class="exercise-card"><p>Mergulho nas paralelas – 3x10</p></div>
-        <div class="exercise-card"><p>Tríceps pulley corda – 3x12</p></div>
-      </div>
-    </ion-accordion>
+      <div class="accordion-content" slot="content">
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Supino reto – 4x10</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Supino inclinado – 4x10</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Crossover – 3x12</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Mergulho nas paralelas – 3x10</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Tríceps pulley corda – 3x12</ion-label>
+        </ion-item>
+      </div>
+    </ion-accordion>
 
-    <!-- DIA 2 -->
-    <ion-accordion value="dia2" toggle-icon="chevron-down-outline">
-      <ion-item slot="header">
-        <ion-label>Dia 2 • Costas + Bíceps</ion-label>
-      </ion-item>
+        <ion-accordion value="dia2" toggle-icon="chevron-down-outline">
+      <ion-item slot="header">
+        <ion-label>Dia 2 • Costas + Bíceps</ion-label>
+      </ion-item>
 
-      <div class="accordion-content" slot="content">
-        <div class="exercise-card"><p>Puxada aberta na frente – 4x10</p></div>
-        <div class="exercise-card"><p>Remada curvada – 4x8</p></div>
-        <div class="exercise-card"><p>Remada sentada – 3x12</p></div>
-        <div class="exercise-card"><p>Rosca direta – 4x10</p></div>
-        <div class="exercise-card"><p>Rosca martelo – 3x12</p></div>
-      </div>
-    </ion-accordion>
+      <div class="accordion-content" slot="content">
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Puxada aberta na frente – 4x10</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Remada curvada – 4x8</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Remada sentada – 3x12</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Rosca direta – 4x10</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Rosca martelo – 3x12</ion-label>
+        </ion-item>
+      </div>
+    </ion-accordion>
 
-    <!-- DIA 3 -->
-    <ion-accordion value="dia3" toggle-icon="chevron-down-outline">
-      <ion-item slot="header">
-        <ion-label>Dia 3 • Pernas</ion-label>
-      </ion-item>
+        <ion-accordion value="dia3" toggle-icon="chevron-down-outline">
+      <ion-item slot="header">
+        <ion-label>Dia 3 • Pernas</ion-label>
+      </ion-item>
 
-      <div class="accordion-content" slot="content">
-        <div class="exercise-card"><p>Agachamento livre – 4x10</p></div>
-        <div class="exercise-card"><p>Leg press – 4x12</p></div>
-        <div class="exercise-card"><p>Afundo – 3x12 cada perna</p></div>
-        <div class="exercise-card"><p>Mesa flexora – 4x12</p></div>
-        <div class="exercise-card"><p>Elevação de panturrilha – 4x15</p></div>
-      </div>
-    </ion-accordion>
+      <div class="accordion-content" slot="content">
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Agachamento livre – 4x10</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Leg press – 4x12</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Afundo – 3x12 cada perna</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Mesa flexora – 4x12</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Elevação de panturrilha – 4x15</ion-label>
+        </ion-item>
+      </div>
+    </ion-accordion>
 
-    <!-- DIA 4 -->
-    <ion-accordion value="dia4" toggle-icon="chevron-down-outline">
-      <ion-item slot="header">
-        <ion-label>Dia 4 • Ombro + Trapézio</ion-label>
-      </ion-item>
+        <ion-accordion value="dia4" toggle-icon="chevron-down-outline">
+      <ion-item slot="header">
+        <ion-label>Dia 4 • Ombro + Trapézio</ion-label>
+      </ion-item>
 
-      <div class="accordion-content" slot="content">
-        <div class="exercise-card"><p>Desenvolvimento com halteres – 4x10</p></div>
-        <div class="exercise-card"><p>Elevação lateral – 4x12</p></div>
-        <div class="exercise-card"><p>Elevação frontal – 3x12</p></div>
-        <div class="exercise-card"><p>Remada alta – 3x10</p></div>
-        <div class="exercise-card"><p>Encolhimento halteres – 3x12</p></div>
-      </div>
-    </ion-accordion>
+      <div class="accordion-content" slot="content">
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Desenvolvimento com halteres – 4x10</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Elevação lateral – 4x12</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Elevação frontal – 3x12</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Remada alta – 3x10</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Encolhimento halteres – 3x12</ion-label>
+        </ion-item>
+      </div>
+    </ion-accordion>
 
-    <!-- DIA 5 -->
-    <ion-accordion value="dia5" toggle-icon="chevron-down-outline">
-      <ion-item slot="header">
-        <ion-label>Dia 5 • Corpo inteiro</ion-label>
-      </ion-item>
+        <ion-accordion value="dia5" toggle-icon="chevron-down-outline">
+      <ion-item slot="header">
+        <ion-label>Dia 5 • Corpo inteiro</ion-label>
+      </ion-item>
 
-      <div class="accordion-content" slot="content">
-        <div class="exercise-card"><p>Agachamento frontal – 4x10</p></div>
-        <div class="exercise-card"><p>Levantamento terra – 4x6</p></div>
-        <div class="exercise-card"><p>Paralelas – 3x10</p></div>
-        <div class="exercise-card"><p>Remada curvada – 3x10</p></div>
-        <div class="exercise-card"><p>Flexão de braço – 3x15</p></div>
-      </div>
-    </ion-accordion>
+      <div class="accordion-content" slot="content">
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Agachamento frontal – 4x10</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Levantamento terra – 4x6</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Paralelas – 3x10</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Remada curvada – 3x10</ion-label>
+        </ion-item>
+        <ion-item lines="none" class="exercise-card-item">
+            <ion-label>Flexão de braço – 3x15</ion-label>
+        </ion-item>
+      </div>
+    </ion-accordion>
 
-  </ion-accordion-group>
+  </ion-accordion-group>
 
 </ion-content>
