--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,8 @@
 <ion-content>
   <div class="container">
     <div class="header">
-      <h1 class="greeting" *ngIf="userName">Olá, {{ userName }}</h1>
-      <div class="profile-icon">
-        <ion-icon name="person"></ion-icon>
-      </div>
+      <h1 class="greeting" If="userName">Olá, {{ userName }}</h1>
+      
     </div>
 
     <div class="card">
